--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,10 +35,26 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+    env:
+      SERVER_HOST: ${{ secrets.SERVER_HOST }}
+      SERVER_USER: ${{ secrets.SERVER_USER }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Validate secrets
+        run: |
+          if [ -z "$SERVER_HOST" ]; then
+            echo "❌ Error: SERVER_HOST secret is not set"
+            exit 1
+          fi
+          if [ -z "$SERVER_USER" ]; then
+            echo "❌ Error: SERVER_USER secret is not set"
+            exit 1
+          fi
+          echo "✅ All required secrets are configured"
+          echo "Deploying to: $SERVER_USER@$SERVER_HOST"
 
       - name: Setup SSH
         uses: webfactory/ssh-agent@v0.9.0
@@ -48,7 +64,7 @@ jobs:
       - name: Add server to known hosts
         run: |
           mkdir -p ~/.ssh
-          ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H "$SERVER_HOST" >> ~/.ssh/known_hosts
 
       - name: Deploy to server
         run: |
@@ -58,11 +74,11 @@ jobs:
             --exclude '.git' \
             --exclude '.github' \
             --exclude '*.log' \
-            ./ ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:~/cocow-app/
+            ./ "$SERVER_USER@$SERVER_HOST:~/cocow-app/"
 
       - name: Build and start services
         run: |
-          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+          ssh "$SERVER_USER@$SERVER_HOST" << 'EOF'
             cd ~/cocow-app
             
             # 创建网络（如果不存在）
@@ -93,7 +109,7 @@ jobs:
 
       - name: Health check
         run: |
-          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+          ssh "$SERVER_USER@$SERVER_HOST" << 'EOF'
             cd ~/cocow-app
             
             # 检查容器是否运行
@@ -109,7 +125,7 @@ jobs:
       - name: Cleanup on failure
         if: failure()
         run: |
-          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+          ssh "$SERVER_USER@$SERVER_HOST" << 'EOF'
             cd ~/cocow-app
             echo "⚠️  Deployment failed, cleaning up..."
             docker-compose down
