--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,28 +81,32 @@ jobs:
         run: |
           ssh "$SERVER_USER@$SERVER_HOST" << 'EOF'
             cd ~/cocow-app
+            COMPOSE_CMD="docker compose"
+            if command -v docker-compose >/dev/null 2>&1; then
+              COMPOSE_CMD="docker-compose"
+            fi
             
             # 创建网络（如果不存在）
             docker network inspect cocow-network >/dev/null 2>&1 || docker network create cocow-network
             
             # 备份当前状态
-            docker-compose ps > deployment-backup-$(date +%Y%m%d-%H%M%S).txt 2>/dev/null || true
+            $COMPOSE_CMD ps > deployment-backup-$(date +%Y%m%d-%H%M%S).txt 2>/dev/null || true
             
             # 停止旧容器
-            docker-compose down
+            $COMPOSE_CMD down
             
             # 在服务器上构建镜像
-            docker-compose build --no-cache
+            $COMPOSE_CMD build --no-cache
             
             # 启动服务
-            docker-compose up -d
+            $COMPOSE_CMD up -d
             
             # 等待服务启动
             echo "Waiting for services to start..."
             sleep 15
             
             # 检查服务状态
-            docker-compose ps
+            $COMPOSE_CMD ps
             
             # 清理悬空镜像
             docker image prune -f
@@ -112,11 +116,15 @@ jobs:
         run: |
           ssh "$SERVER_USER@$SERVER_HOST" << 'EOF'
             cd ~/cocow-app
+            COMPOSE_CMD="docker compose"
+            if command -v docker-compose >/dev/null 2>&1; then
+              COMPOSE_CMD="docker-compose"
+            fi
             
             # 检查容器是否运行
-            if ! docker-compose ps | grep -q "Up"; then
+            if ! $COMPOSE_CMD ps | grep -q "Up"; then
               echo "❌ Error: Containers are not running"
-              docker-compose logs
+              $COMPOSE_CMD logs
               exit 1
             fi
             
@@ -128,7 +136,11 @@ jobs:
         run: |
           ssh "$SERVER_USER@$SERVER_HOST" << 'EOF'
             cd ~/cocow-app
+            COMPOSE_CMD="docker compose"
+            if command -v docker-compose >/dev/null 2>&1; then
+              COMPOSE_CMD="docker-compose"
+            fi
             echo "⚠️  Deployment failed, cleaning up..."
-            docker-compose down
-            docker-compose logs
+            $COMPOSE_CMD down
+            $COMPOSE_CMD logs
           EOF
